add arxiv links

--- a/ToyData.ipynb
+++ b/ToyData.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Deterministic Variational Inference: Toy example\n",
-    "Code to accompany *add arxiv link*"
+    "Code to accompany [**Fixing Variational Bayes: Deterministic Variational Inference for Bayesian Neural Networks**](https://arxiv.org/abs/1810.03958)"
    ]
   },
   {
